# rdf-sql-bulkloader

./: .cruft.json  README.md  pyproject.toml  tox.ini
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
docs/: conf.py  index.rst
src/rdf_sql_bulkloader/: __init__.py  cli.py  main.py
src/rdf_sql_bulkloader/loaders/: __init__.py  bulkloader.py  sqlite3_bulkloader.py
tests/: __init__.py  test_oxigraph.py  test_sqlite3_bulkloader.py
tests/input/: go-nucleus.owl  lang-example.owl  lang-example.ttl
