[tool.poetry]
name = "rdf-sql-bulkloader"
version = "0.1.0rc2"
description = "rdf-sql-bulkloader"
authors = ["Chris Mungall <cjmungall@lbl.gov>"]
license = "BSD 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
setuptools = "^65.0.1"
tox = "^3.25.1"
click = "^8.1.3"
importlib = "^1.0.4"
lightrdf = "^0.2.1"
curies = "^0.2.0"
prefixmaps = "^0.1.2"
pyoxigraph = "^0.3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-click = "^4.3.0"

[tool.poetry.scripts]
rdf-sql-bulkloader = "rdf_sql_bulkloader.cli:main"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    ]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
